<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textPersonName"
        android:hint="@string/activity_main_lblName"
        tools:text="@tools:sample/first_names">

        <requestFocus/>
    </EditText>
    <EditText
        android:id="@+id/txtSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textPersonName"
        android:hint="@string/activity_main_lblLastName"
        tools:text="@tools:sample/last_names">


    </EditText>
    <CheckBox
        android:id="@+id/chkPolite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"

        android:text="@string/main_activity_polite_mode"/>
    <Button
        android:id="@+id/btnGreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_btnGreet"/>
    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_btnReset"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblGreet" />
</LinearLayout>